# getcourse_scraper

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/cms/: mod.rs
