[package]
name = "getcourse_downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "cookies"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
scraper = "0.23.1"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
m3u8-rs = "6.0.0"